--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <canvas id="canvas" width="1000px" height="500px"></canvas>
+    <p>
+        AI being stupid? thats the point itll be like that for a while
+        <br>
+        Not loading/Page is lagging? Open the console and see why.
+        <br>
+        Confidence required to jump: <input type="range" min="1" max="100" id="confidenceToJump"> <span id="confidenceValue"></span>
+    </p>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <script src="./Player.js"></script>
     <script src="./Obstacle.js"></script>
